objects/GF_Meeting_Occurrence__c.object
<CustomObject>
    <description>Fv2:It will be child object for team room Meeting. The multiple occurrences of a team room meeting will be managed via this custom object.</description>
    <fields>
        <fullName>Agenda__c</fullName>
        <description>FV2 : Used for storing meeting agenda.</description>
        <label>Agenda</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <description>FV2:End Date of GF meeting</description>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Meeting_Date__c</fullName>
        <description>FV2 :  Used for storing the meeting date.</description>
        <formula>DATEVALUE( Start_Time__c )</formula>
        <label>Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meeting_Notes__c</fullName>
        <description>FV2:Stores the meeting notes for the Meeting Occurance</description>
        <label>Meeting Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>FV2:Start Date of GF meeting</description>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>FV2 : This field will store the individual meeting occurance status.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_Room_Meeting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>FV2 : It looks up to the Team Room Meeting record.</description>
        <label>Team Room Meeting</label>
        <referenceTo>Team_Room_Meeting__c</referenceTo>
        <relationshipLabel>GF Meeting Occurrence</relationshipLabel>
        <relationshipName>GF_Meeting_Occurrence</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>GF Meeting Occurrence</label>
    <nameField>
        <displayFormat>TMO-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GF Meeting Occurrence</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>GFMeetingInviteeValidation</fullName>
        <active>true</active>
        <description>FV2:Validation rule to validate that Invitees cannot be added to past meeting occurrences.</description>
        <errorConditionFormula>AND(
IsNew(), DATEVALUE( Start_Time__c )&lt; TODAY() 
)</errorConditionFormula>
        <errorDisplayField>Start_Time__c</errorDisplayField>
        <errorMessage>Invitees cannot be added to past meeting occurrences.</errorMessage>
    </validationRules>
</CustomObject>